# ChangeLog for games-server/bf1942-lnxded
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-server/bf1942-lnxded/ChangeLog,v 1.3 2004/07/01 11:22:47 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  bf1942-lnxded-1.5.ebuild:
  virtual/glibc -> virtual/libc

*bf1942-lnxded-1.5 (28 Dec 2003)

  28 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me for #33068.