@@ -1,6 +1,12 @@
 # ChangeLog for games-server/bf1942-lnxded
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-server/bf1942-lnxded/ChangeLog,v 1.3 2004/07/01 11:22:47 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-server/bf1942-lnxded/ChangeLog,v 1.4 2004/08/31 02:14:13 vapier Exp $
+
+*bf1942-lnxded-1.6_rc2 (30 Aug 2004)
+
+  30 Aug 2004; Mike Frysinger <vapier@gentoo.org>
+  +bf1942-lnxded-1.6_rc2.ebuild:
+  Version bump
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
   bf1942-lnxded-1.5.ebuild:
